--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,15 @@
-[submodule "external/Vulkan-Headers"]
-	path = external/Vulkan-Headers
-	url = https://github.com/KhronosGroup/Vulkan-Headers
-[submodule "external/Vulkan-Loader"]
-	path = external/Vulkan-Loader
-	url = https://github.com/KhronosGroup/Vulkan-Loader
-[submodule "external/glslang"]
-	path = external/glslang
+[submodule "engine/external/Vulkan-Loader"]
+	path = engine/external/Vulkan-Loader
+	url = https://github.com/KhronosGroup/Vulkan-Loader.git
+[submodule "engine/external/glslang"]
+	path = engine/external/glslang
 	url = https://github.com/KhronosGroup/glslang.git
-[submodule "external/sdl"]
-	path = external/sdl
+[submodule "engine/external/SDL"]
+	path = engine/external/SDL
 	url = https://github.com/libsdl-org/SDL.git
+[submodule "engine/external/imgui"]
+	path = engine/external/imgui
+	url = https://github.com/ocornut/imgui.git
+[submodule "engine/external/Vulkan-Headers"]
+	path = engine/external/Vulkan-Headers
+	url = https://github.com/KhronosGroup/Vulkan-Headers.git
